--- a/forum-center/src/main/webapp/pages/article/article.html
+++ b/forum-center/src/main/webapp/pages/article/article.html
@@ -295,7 +295,7 @@
     <div id="header">
         <img src="../../images/3.png">
         <img src="../../images/logo_right.jpg" class="pull-right" style="margin-right:120px">
-        <div class="pic"  v-if="user!=null">
+        <div class="pic"  v-if="JSON.stringify(this.user)!='{}'">
 
             <img :src="'http://q2rcyhwpl.bkt.clouddn.com/'+user.avatarName" width="30px" height="30px" class="img-circle" style="margin-left: -23px;margin-bottom: -17px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><div id="user-name">{{user.username}}</div>
             <span v-cloak class='item' style="font-size: 13px"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">{{user.name}}</span>
@@ -306,7 +306,7 @@
                 <div style="padding-left: 10px;margin-top: 10px;"><a style="font-weight: bold" href="#" @click="layout">退出</a></div>
             </div>
         </div>
-        <div class="pic" v-if="user==null">
+        <div class="pic" v-if="JSON.stringify(this.user)=='{}'">
             <a @click="login" class="login" style="text-decoration: none;color: skyblue;font-weight: bold; font-size: 15px">登&nbsp;&nbsp;&nbsp;陆</a>
         </div>
     </div>
@@ -330,7 +330,7 @@
             <hr>
             <div id="writer">
                 <a id="suport" @click="add"><span  :class="['glyphicon','glyphicon-thumbs-up', {'zi':flag},{'zi1':!flag}]" ></span> </a>&nbsp;&nbsp;&nbsp;<div id="support-num">{{support_num>10000?Math.floor(support_num/10000)+'0000+':support_num}}</div>
-                <a href="#" @click="writerDetail()">
+                <a href="#" @click="writerDetail(article.uid)">
                 <img :src="'http://q2rcyhwpl.bkt.clouddn.com/'+avatarName" class="img-circle" width="30px" height="30px"/></a>&nbsp;&nbsp;&nbsp;<a ref="atten" id="atten" @click="isAttention">关注</a>
             </div>
             <hr>
@@ -339,7 +339,7 @@
 
                     <img src="../../images/la.jpg" class="img-circle" width="30px" height="30px" style="margin-top: -146px;margin-left: 10px">
 
-                    <textarea type="text" style="height: 100px;width:90%;margin-left: 5px" :placeholder="placeholder" v-model="comment.content"></textarea>
+                    <textarea type="text" @focus="showPub" style="height: 100px;width:90%;margin-left: 5px" :placeholder="placeholder" v-model="comment.content"></textarea>
                     <div id="pub">
                         <div style="position:absolute;margin-left: 672px;margin-top: 11px;color: #b399b3">最多只能输入1000字</div>
                         <button class="btn btn-sm btn-danger pull-right" style="margin-right: 50px;" @click="pubComment">发表评论</button>
@@ -348,28 +348,36 @@
 
                 </div>
                 <div id="comment-list" style="margin-top: 45px">
-                    <div v-for="comment in comments" style="border-bottom: 1px grey dashed;margin-top: 10px">
+                    <div v-for="(comment,index) in comments" :key="index"  style="border-bottom: 1px grey dashed;margin-top: 10px">
                         <div style="margin-left: 10px">
                             <div>
                                 <div style="width: 96%">
-                                    <img  class="head-pic" src="../../images/0.jpg"><div id="CN">{{comment.customerName}}</div>
-                                    <span class="pull-right"> <el-button type="text" data-toggle="modal" data-target="#myModal">举报</el-button>&nbsp;&nbsp;&nbsp;<a @click="reply(comment.id,comment.customerName)">回复</a>&nbsp;&nbsp;&nbsp;<a @click="showReplyComment(comment.id)"><span :id="comment.id+'show'">查看回复</span></a></span>
+                                    <a><img  class="head-pic img-circle" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+comment.avatarName" @click="writerDetail(comment.customerId)"></a><div id="CN">{{comment.customerName}}</div>
+                                    <span class="pull-right">
+                                        <el-button type="text" data-toggle="modal" data-target="#myModal">举报</el-button>
+                                        &nbsp;&nbsp;&nbsp;<a v-if="comment.customerId==user.id" @click="deleteCommentById(comment.id,index,comment.parentId)">删除</a>
+                                        &nbsp;&nbsp;&nbsp;<a @click="reply(comment.id,comment.customerName,index)">回复</a>
+                                        &nbsp;&nbsp;&nbsp;<a @click="showReplyComment(comment.id,index)"><span :id="comment.id+'show'">查看回复</span></a></span>
                                     <div class="first-con" >
                                         {{comment.content}}
                                     </div>
                                 </div>
                             </div>
-                            <div v-if="comment.replyComments!=''" class="second-con" :id="comment.id">
-                                <div v-for="replyComment in comment.replyComments">
+
+                            <div  class="second-con" :id="comment.id">
+                                <div v-for="(replyComment,index2) in comment.replyComments" :key="index2">
                                     <div class="back">
-                                        <img class="head-pic" src="../../images/0.jpg"/>
+                                        <a><img class="head-pic img-circle" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+replyComment.avatarName" @click="writerDetail(replyComment.customerId)"/></a>
                                         <div class="ss">
                                             <span style="font-weight: bold;font-size: 16px">{{replyComment.replyCustomerName}}</span>&nbsp;&nbsp;&nbsp;
                                             <span style="color: #999999">回复了</span>&nbsp;&nbsp;&nbsp;<span>{{replyComment.customerName}}</span>
-                                            <div style="margin-left: 734px;margin-top: -20px"> <el-button type="text" data-toggle="modal" data-target="#myModal">举报</el-button>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;<a @click="reply(replyComment.id,replyComment.replyCustomerName)">回复</a></div>
-                                        </div>
+                                            <div style="margin-left: 701px;margin-top: -20px">
 
+                                                <el-button type="text" data-toggle="modal" data-target="#myModal">举报</el-button>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;<a v-if="replyComment.customerId==user.id" @click="deleteCommentById(replyComment.id,index,replyComment.parentId,index2)">删除</a>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;<a @click="reply(replyComment.id,replyComment.replyCustomerName,index)">回复</a>
+                                            </div>
+                                </div>
                                         <div class="reply-content">
                                             <span>{{replyComment.content}}</span>
                                         </div>
@@ -426,7 +434,7 @@
                     <div style="margin-top: 10px">
                         <span style="font-weight: bold">补充说明（选填）</span>
                         <div style="margin-top: 10px">
-                              <textarea cols="86" placeholder="请填写附加的补充内容" v-model="complaint.content"></textarea>
+                              <textarea id="textarea" cols="86" placeholder="请填写附加的补充内容" v-model="complaint.content"></textarea>
                         </div>
                     </div>
                     <div style="margin-left: 467px;margin-top: 15px">
@@ -444,19 +452,11 @@
 </body>
 <script>
 
+
     $("#pub").hide()
     $("#cancle").hide();   // 撤销提示显示
-
+    $(".second-con").hide()
     // 当textare获取焦点时，提交按钮进行显示，其他则进行隐藏
-    $(function () {
-        $(".second-con").hide()
-        $("textarea").focus(function () {
-            $("#pub").show()
-        })
-
-
-    })
-
 
     function getId() {
         var qs = location.search.substr(1), // 获取url中"?"符后的字串
@@ -468,7 +468,7 @@
         return id;
     }
 
-   // $("#mark").hide();
+
 
 
     var vm = new Vue({
@@ -477,34 +477,37 @@
             complaint:{id:1,type:1,content:'',remark:''},
             comment:{content:''}, // 评论对象
             attention_flag:false,  //判断用（测试时使用，后台会出传递回来true 或者false）
-            user:null,  // 用户数据模型
+            user:{},  // 用户数据模型
             avatarName:'',
             text:'',
+            arrayIndex:-1,
             flag:true,
             support_num:7859972,
             article:{id:1,title:'神雕侠侣',pubTime:'2014-12-25',content:'时那是当然价格多少时放到搜软件'},
             comments:[
-                {id:1,parentId:0,content:'真好',customerName:'阿东',
+                {id:1,parentId:0,content:'真好',customerName:'阿东',avatarName:'li.jpg',
                    replyComments:[
-                       {id:3,parentId:1,customerName:'adog',replyCustomerName:'gougang',content:'还好'},
-                       {id:4,parentId:3,customerName:'adog',replyCustomerName:'dd',content:'垃圾'},
+                       {id:3,parentId:1,customerName:'adog',replyCustomerName:'gougang',content:'还好',avatarName:'li.jpg'},
+                       {id:4,parentId:3,customerName:'adog',replyCustomerName:'dd',content:'垃圾',avatarName:'li.jpg',},
                    ]
                 },
-                {id:5,parentId:0,content:'真好',customerName:'阿东',
+                {id:5,parentId:0,content:'真好',customerName:'阿东',avatarName:'li.jpg',
                     replyComments:[
-                        {id:6,parentId:5,customerName:'adog',replyCustomerName:'gougang',content:'还好'},
-                        {id:7,parentId:5,customerName:'adog',replyCustomerName:'张三',content:'垃圾'},
-                        {id:8,parentId:5,customerName:'adog',replyCustomerName:'gougang',content:'还好'},
+                        {id:6,parentId:5,customerName:'adog',replyCustomerName:'gougang',content:'还好',avatarName:'li.jpg'},
+                        {id:7,parentId:5,customerName:'adog',replyCustomerName:'张三',content:'垃圾',avatarName:'li.jpg'},
+                        {id:8,parentId:5,customerName:'adog',replyCustomerName:'gougang',content:'还好',avatarName:'li.jpg'},
 
                     ]
                 }
             ],
             placeholder:'您想对作者说些什么',
-            parentId:0
+            parentId:0,
+            replyCustomerName:''
 
         },
 
         created(){
+            alert(JSON.stringify(this.user)=='{}')
             // 获取文章id查询文章内容
            let id = getId();
            // 发送axios请求获取文章数据
@@ -515,6 +518,37 @@
                     axios.get("/user/getUserById.do?id="+this.article.uid).then(res=>{
                         if (res.data.flag) {
                             this.avatarName = res.data.data.avatarName;
+                            // 获取用户信息
+                            axios.get("/user/getUserByToken.do").then((res)=>{
+                                if(res.data.flag){
+                                    alert("已经查到用户")
+                                    this.user = res.data.data;
+                                    alert(this.user.id)
+                                    // 根据用户信息和作者信息到数据库中查询是否已经关注，返回条数若为以说明已经关注
+                                    axios.get("/fan-atten/relation.do?fid=" + this.user.id + "&tid=" + this.article.uid).then((res) => {
+                                        if (res.data.flag) {
+                                            $("#atten").text('已关注');
+                                            $("#atten").css({"color": 'darkblue'})
+                                            this.attention_flag = !this.attention_flag;
+                                        } else {
+                                            $("#atten").text('关注');
+                                            $("#atten").css({"color": 'blue'})
+                                            this.attention_flag = !this.attention_flag;
+                                        }
+                                    });
+                                }else{
+                                    this.user = {};
+                                }
+                            });
+                        }else {
+                            this.$message.error(res.data.message);
+                        }
+                    });
+
+                    // 获取文章评论信息
+                    axios.get("/comment/getComments.do?content_id="+id+"&type=1").then((res) =>{
+                        if ( res.data.flag ) {
+                            this.comments = res.data.data;
                         }else {
                             this.$message.error(res.data.message);
                         }
@@ -537,33 +571,14 @@
 
 
 
-            // 获取用户信息
-            axios.get("/user/getUserByToken.do").then((res)=>{
-                if(res.data.flag){
-                    this.user = res.data.data;
-                    //alert(this.article.uid)
-                    // 根据用户信息和作者信息到数据库中查询是否已经关注，返回条数若为以说明已经关注
-                    axios.get("/fan-atten/relation.do?fid="+this.user.id+"&tid="+this.article.uid).then((res)=>{
-                        if( res.data.flag ) {
-                            $("#atten").text('已关注');
-                            $("#atten").css({"color":'darkblue'})
-                            this.attention_flag = !this.attention_flag;
-                        }else{
-                            $("#atten").text('关注');
-                            $("#atten").css({"color":'blue'})
-                            this.attention_flag = !this.attention_flag;
-                        }
-
-                    });
-                }else{
-                    this.user = null;
-                }
-            });
         },
 
 
 
         methods:{
+            showPub(){
+                $("#pub").show();
+            },
 
             // 取消投诉，取消后，将模态框进行隐藏
             rescind(){
@@ -571,17 +586,28 @@
             },
             // 发送投诉信息
             sure(){
+                if (!this.isLogin()) {
+                    this.$message.error("登陆后才能投诉");
+                    return false ;
+                }
                 // 将complaint对象出入数据库中，举报成功后将模态框关闭
                 $('#myModal').modal('hide')
             },
             // 当点击回复某一条评论，改变textare中的placeholder，让其获取焦点，并将撤销按钮显示出来
-            reply(id,name){
-                alert(id)
+            reply(id,name,index){
+                alert(index)
+                if (!this.isLogin()) {
+                    this.$message.error("登陆后才能回复");
+                    return false ;
+                }
+                $("#"+id).show(500) ;
+                $("#"+id+"show").text("收起回复");
+                //alert(index)
+                this.arrayIndex = index
                 this.parentId = id;
                 this.placeholder="回复:"+name
                 $("textarea").focus()
                 $("#cancle").show()
-
             },
 
             // 撤销回复的方法，当回复者不想进行回复时，点击撤销回复按钮，会将评论设置为对文章的评论，将撤销按钮进行隐藏
@@ -594,13 +620,44 @@
 
             // 发表评论，重点是记录下父评论的id
             pubComment(){
-                alert(this.parentId);
+                if (!this.isLogin()) {
+                    this.$message.error("登陆后方可评论");
+                    return false ;
+                }
+                alert(this.arrayIndex)
                 this.comment.parentId=this.parentId
-                alert(this.parentId)
+                this.comment.customerId = this.user.id;
+                this.comment.content_id = this.article.id;
+                this.comment.avatarName = this.user.avatarName;
+                this.comment.customerName = this.user.username;
+                this.comment.type=1
+                axios.post("/comment/pubComment.do", this.comment).then((res => {
+                    if (res.data.flag) {
+                        if (this.parentId == 0){
+                            // 此评论为父评论，直接在
+                            this.comments.unshift(res.data.data)
+                        }else {
+                            this.comments[this.arrayIndex].replyComments.unshift(res.data.data)
+                        }
+                    }else {
+                        this.$message.error(res.data.message)
+                    }
+                })).finally(()=>{
+                    this.comment.content='' ;
+                    this.placeholder='您想对作者说些什么' ;
+                    this.parentId=0 ;
+                    $("#cancle").hide() ;
+                });
+
             },
 
             // 点即查看回复，回复展示，点击收起，回复列表收起
-            showReplyComment(id){
+            showReplyComment(id,index){
+                if (!this.isLogin()) {
+                    this.$message.error("登陆后方可查看");
+                    return false ;
+                }
+                this.arrayIndex = index;
                 var text =  $("#"+id+"show").text();
 
                 if(text == "查看回复"){
@@ -610,13 +667,20 @@
                     $("#"+id).hide(500)
                     $("#"+id+"show").text("查看回复")
                 }
-
-
             },
             // 登陆时跳转页面
             login(){
                 var url = window.location.href ;
                 window.location.href='../user/login.html?redirectUrl='+url
+            },
+
+
+            //判断用户是否登陆
+            isLogin(){
+              if (this.user == null) {
+                  return false;
+              }
+              return true;
             },
 
 
@@ -693,11 +757,33 @@
 
 
             // 点击头像展示用户详细信息
-            writerDetail(){
-                window.location.href='/pages/fan-atten/attention_detail.html?id='+this.article.uid
-            }
+            writerDetail(id){
+                window.location.href='/pages/fan-atten/attention_detail.html?id='+id
+            },
 
-
+            // 删除评论
+            deleteCommentById(id,index,parentId,index2){
+                this.$confirm("确认删除吗？","提示",{type:"warning"}).then(()=>{
+                    if (parentId == 0 ){
+                        this.comments.splice(index,1)
+                    }else {
+                        this.comments[index].replyComments.splice(index2,1);
+                    }
+                    // 点击确认执行此处代码
+                    axios.get("/comment/deleteById.do?id="+id).then((res)=>{
+                        if(res.data.flag){
+                            this.$message({
+                                message:res.data.message,
+                                type:"success"
+                            })
+                        }else{
+                            this.$message("删除失败")
+                        }
+                    })
+                }).catch(()=>{
+                    this.$message("已取消")
+                })
+            },
 
         }
     })
